--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,8 @@
 compile.on.save=true
-user.properties.file=/Users/Again/Library/Application Support/NetBeans/8.0/build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=/Users/again/Library/Application Support/NetBeans/12.4/build.properties
