--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JogoGuerra_1_7_1_1
+application.vendor=again
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -18,20 +19,84 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/JogoGuerra_1_7_1_1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.api-0.1.2.jar=../../../Downloads/jar_files/api-0.1.2.jar
+file.reference.awt-0.1.2.jar=../../../Downloads/jar_files/awt-0.1.2.jar
+file.reference.cdi-api-2.0.SP1.jar=../../../Downloads/jar_files/cdi-api-2.0.SP1.jar
+file.reference.commons-io-2.11.0.jar=../../../Downloads/jar_files/commons-io-2.11.0.jar
+file.reference.core-0.1.2.jar=../../../Downloads/jar_files/core-0.1.2.jar
+file.reference.dom4j-2.1.3.jar=../../../Downloads/jar_files/dom4j-2.1.3.jar
+file.reference.environment-0.1.2.jar=../../../Downloads/jar_files/environment-0.1.2.jar
+file.reference.impl-0.1.2.jar=../../../Downloads/jar_files/impl-0.1.2.jar
+file.reference.jakarta.activation-2.0.1.jar=../../../Downloads/jar_files/jakarta.activation-2.0.1.jar
+file.reference.jakarta.xml.bind-api-3.0.1.jar=../../../Downloads/jar_files/jakarta.xml.bind-api-3.0.1.jar
+file.reference.javassist-3.28.0-GA.jar=../../../Downloads/jar_files/javassist-3.28.0-GA.jar
+file.reference.javax.activation-api-1.2.0.jar=../../../Downloads/jar_files/javax.activation-api-1.2.0.jar
+file.reference.javax.el-api-3.0.0.jar=../../../Downloads/jar_files/javax.el-api-3.0.0.jar
+file.reference.javax.inject-1.jar=../../../Downloads/jar_files/javax.inject-1.jar
+file.reference.javax.interceptor-api-1.2.jar=../../../Downloads/jar_files/javax.interceptor-api-1.2.jar
+file.reference.javax.persistence-api-2.2.jar=../../../Downloads/jar_files/javax.persistence-api-2.2.jar
+file.reference.jaxb-api-2.4.0-b180830.0359.jar=../../../Downloads/jar_files/jaxb-api-2.4.0-b180830.0359.jar
+file.reference.jaxb-core-3.0.2.jar=../../../Downloads/jar_files/jaxb-core-3.0.2.jar
+file.reference.jaxb-impl-3.0.2.jar=../../../Downloads/jar_files/jaxb-impl-3.0.2.jar
+file.reference.jcabi-log-0.14.jar=../../../Downloads/jar_files/jcabi-log-0.14.jar
+file.reference.jcabi-manifests-1.1.jar=../../../Downloads/jar_files/jcabi-manifests-1.1.jar
+file.reference.jsr305-3.0.2.jar=../../../Downloads/jar_files/jsr305-3.0.2.jar
+file.reference.manifest-0.1.2.jar=../../../Downloads/jar_files/manifest-0.1.2.jar
+file.reference.model-0.1.2.jar=../../../Downloads/jar_files/model-0.1.2.jar
+file.reference.reflections-0.10.2.jar=../../../Downloads/jar_files/reflections-0.10.2.jar
+file.reference.slf4j-api-1.7.29.jar=../../../Downloads/jar_files/slf4j-api-1.7.29.jar
+file.reference.swing-layout-1.0.4.jar=../../../Downloads/swing-layout-1.0.4.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${file.reference.swing-layout-1.0.4.jar}:\
+    ${file.reference.api-0.1.2.jar}:\
+    ${file.reference.awt-0.1.2.jar}:\
+    ${file.reference.cdi-api-2.0.SP1.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.core-0.1.2.jar}:\
+    ${file.reference.dom4j-2.1.3.jar}:\
+    ${file.reference.environment-0.1.2.jar}:\
+    ${file.reference.impl-0.1.2.jar}:\
+    ${file.reference.jakarta.activation-2.0.1.jar}:\
+    ${file.reference.jakarta.xml.bind-api-3.0.1.jar}:\
+    ${file.reference.javassist-3.28.0-GA.jar}:\
+    ${file.reference.javax.activation-api-1.2.0.jar}:\
+    ${file.reference.javax.el-api-3.0.0.jar}:\
+    ${file.reference.javax.inject-1.jar}:\
+    ${file.reference.javax.interceptor-api-1.2.jar}:\
+    ${file.reference.javax.persistence-api-2.2.jar}:\
+    ${file.reference.jaxb-api-2.4.0-b180830.0359.jar}:\
+    ${file.reference.jaxb-core-3.0.2.jar}:\
+    ${file.reference.jaxb-impl-3.0.2.jar}:\
+    ${file.reference.jcabi-log-0.14.jar}:\
+    ${file.reference.jcabi-manifests-1.1.jar}:\
+    ${file.reference.jsr305-3.0.2.jar}:\
+    ${file.reference.manifest-0.1.2.jar}:\
+    ${file.reference.model-0.1.2.jar}:\
+    ${file.reference.reflections-0.10.2.jar}:\
+    ${file.reference.slf4j-api-1.7.29.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.6
@@ -39,11 +104,14 @@ javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -52,11 +120,30 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=JogoGuerra_1_7_1_1
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=jogoguerra.JogoGuerra
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -64,9 +151,13 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
